--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "flatpickr": "^4.5.2",
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.51.0",
+    "sweetalert": "^2.1.2",
     "typed.js": "^2.0.9"
   },
   "devDependencies": {
